# rqt-plugin-generator

./: README.md  rqt-plugin-generator.sh
template/: CMakeLists.txt  package.xml  plugin.xml  setup.py
template/resource/: template.ui
template/scripts/: rqt_template
template/src/rqt_template/: template.py
